--- a/index.html
+++ b/index.html
@@ -39,6 +39,30 @@
 				z-index: 1;
 				font-family: 'DM Mono', monospace;
 			}
+			div#controls {
+				position: absolute;
+				top: 0px;
+				left: 0px;
+				z-index: 3;
+				background: #626262;
+				color: #fff;
+				border-bottom-right-radius: 5px;
+				overflow: hidden; /* TODO */
+			}
+			div#controls div {
+				width: 50px;
+				height: 50px;
+				line-height: 50px;
+				vertical-align: center;
+				text-align: center;
+				cursor: pointer;
+				display: inline-block;
+				background: #626262;
+			}
+			div#controls div:hover,
+			div#controls div[data-selected] {
+				background: #535353;
+			}
 		</style>
 		<script src="https://kit.fontawesome.com/2d6e849747.js" crossorigin="anonymous"></script>
 	</head>
@@ -46,6 +70,13 @@
 		<canvas id="c"></canvas>
 		<canvas id="graph"></canvas>
 		<div id="count"></div>
+		<div id="controls">
+			<div id="playpause"><i class="fas fa-play"></i></div> <!-- <i class="fas fa-pause"></i> -->
+			<div id="circleadd"><i class="fas fa-plus-circle"></i></div>
+			<div id="pointer"><i class="fas fa-mouse-pointer"></i></div>
+			<!--<div id="wall"><i class="fas fa-vector-square"></i></div>-->
+			<div id="drawlines"><i class="fas fa-pencil-ruler"></i></div>
+		</div>
 		<script src="index.js"></script>
 	</body>
 </html>
