--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 	<head>
 		<title>COVID</title>
 		<meta charset="utf8"/>
-		<link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@500&display=swap" rel="stylesheet"> 
+		<link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@500&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
 		<style>
 			html, body {
 				margin: 0px;
 				width: 100vw;
 				height: 100vh;
 				overflow: hidden;
+			}
+			* {
+				font-family: Cabin, sans-serif;
 			}
 			canvas#c {
 				position: absolute;
@@ -63,6 +67,49 @@
 			div#controls div[data-selected] {
 				background: #535353;
 			}
+			#overlay {
+				z-index: 10;
+				position: absolute;
+				top: 0px;
+				left: 0px;
+				width: 100%;
+				height: 100%;
+				background: rgba(0, 0, 0, 0.2);
+			}
+			#modal {
+				background: #fff;
+				border-radius: 2px;
+				padding: 25px 40px;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				z-index: 11;
+				text-align: center;
+				font-size: 20px;
+			}
+			#modal input {
+				outline: 0;
+				padding: 2px;
+				margin: 0 0 0 8px;
+				border: none;
+				border-bottom: 2px solid #333;
+			}
+			#modal .wrapper {
+				text-align: center;
+				margin-top: 10px;
+			}
+			#modal #submit {
+				background: #ccc;
+				display: inline-block;
+				text-align: center;
+				padding: 8px 14px;
+				border-radius: 2px;
+				cursor: pointer;
+			}
+			#modal #submit:hover {
+				background: #bbb;
+			}
 		</style>
 		<script src="https://kit.fontawesome.com/2d6e849747.js" crossorigin="anonymous"></script>
 	</head>
@@ -71,11 +118,19 @@
 		<canvas id="graph"></canvas>
 		<div id="count"></div>
 		<div id="controls">
-			<div id="playpause"><i class="fas fa-play"></i></div> <!-- <i class="fas fa-pause"></i> -->
+			<div id="playpause"><i class="fas fa-play"></i></div>
 			<div id="circleadd"><i class="fas fa-plus-circle"></i></div>
 			<div id="pointer"><i class="fas fa-mouse-pointer"></i></div>
-			<!--<div id="wall"><i class="fas fa-vector-square"></i></div>-->
 			<div id="drawlines"><i class="fas fa-pencil-ruler"></i></div>
+			<div id="drawwalls"><i class="fas fa-border-none"></i></i></div> <!-- <i class="fas fa-chess-board"> -->
+		</div>
+		<div id="overlay" style="display: none"></div>
+		<div id="modal" style="display: none">
+			<div>Number of balls?</div>
+			<input id="nballs" type="text" style="margin: 20px 0px;"><br/>
+			<div class="wrapper">
+				<div id="submit">Go</div>
+			</div>
 		</div>
 		<script src="index.js"></script>
 	</body>
