moved some code and refactored the line code so it is less redundant

--- a/ui/index.html
+++ b/ui/index.html
@@ -27,6 +27,7 @@
 				<div id="submit">Go</div>
 			</div>
 		</div>
+		<script src="sim.js"></script>
 		<script src="index.js"></script>
 	</body>
 </html>
