added basic ui for selecting and drawing

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,38 +5,25 @@
 		<meta charset="utf8"/>
 		<link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@500&display=swap" rel="stylesheet" />
 		<link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
 		<link href="style.css" rel="stylesheet" />
 		<script src="https://kit.fontawesome.com/2d6e849747.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<div class="content">
-			text
-			<div id="sim" class="sim">
-				<!--<div class="field"></div>
-				<canvas class="spread_graph"></canvas>
-				<div class="infection_count"></div>
-				<div class="display">
-					Observed R0: <br/>
-					Observed RE: <br/>
-				</div>
-				<div class="controls">
-					<div class="playpause"><i class="fas fa-play"></i></div>
-					<div class="circleadd"><i class="fas fa-plus-circle"></i></div>
-					<div class="pointer"><i class="fas fa-mouse-pointer"></i></div>
-					<div class="drawlines"><i class="fas fa-pencil-ruler"></i></div>
-					<div class="drawwalls"><i class="fas fa-border-none"></i></i></div> <!-- <i class="fas fa-chess-board"> -- >
-				</div>-->
-			</div>
-			text
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dolor magna eget est lorem. Tortor condimentum lacinia quis vel. Etiam erat velit scelerisque in dictum non consectetur a. Neque viverra justo nec ultrices dui sapien eget. Enim ut sem viverra aliquet eget sit. Est pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat. Tellus at urna condimentum mattis pellentesque id nibh. Volutpat odio facilisis mauris sit amet. Ut diam quam nulla porttitor. Bibendum est ultricies integer quis auctor elit sed vulputate mi. Urna et pharetra pharetra massa massa ultricies mi. Sagittis id consectetur purus ut. Dui id ornare arcu odio ut. Gravida neque convallis a cras semper auctor neque. Turpis egestas maecenas pharetra convallis. Ut eu sem integer vitae justo eget magna fermentum. Sollicitudin ac orci phasellus egestas. Augue neque gravida in fermentum. Purus sit amet volutpat consequat mauris nunc congue nisi vitae.</p>
+
+			
+			<div id="sim" class="sim"></div>
+			
+			<p>Sed viverra ipsum nunc aliquet bibendum enim. Facilisi nullam vehicula ipsum a arcu cursus vitae. Risus viverra adipiscing at in tellus integer feugiat scelerisque varius. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus. Sed id semper risus in hendrerit. Faucibus scelerisque eleifend donec pretium vulputate sapien. Amet commodo nulla facilisi nullam vehicula ipsum a arcu. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper malesuada. Ut ornare lectus sit amet est placerat. Nam aliquam sem et tortor consequat id porta nibh venenatis. Praesent elementum facilisis leo vel fringilla est ullamcorper eget. Amet massa vitae tortor condimentum lacinia quis vel eros donec. Aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Dictumst vestibulum rhoncus est pellentesque. Aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc sed. Ultricies tristique nulla aliquet enim. Vestibulum lorem sed risus ultricies tristique nulla. Eu facilisis sed odio morbi. Imperdiet proin fermentum leo vel orci porta non. Elit pellentesque habitant morbi tristique senectus et.</p>
+
+			<p>Consectetur a erat nam at lectus urna duis convallis convallis. Velit scelerisque in dictum non consectetur a erat. Sagittis eu volutpat odio facilisis mauris sit amet massa vitae. Diam in arcu cursus euismod quis viverra nibh. Tellus elementum sagittis vitae et leo duis ut diam. Enim tortor at auctor urna nunc. Aenean vel elit scelerisque mauris pellentesque. Morbi tristique senectus et netus et. Faucibus scelerisque eleifend donec pretium vulputate sapien. Scelerisque eleifend donec pretium vulputate sapien nec sagittis. Velit ut tortor pretium viverra suspendisse potenti nullam. Est pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus. Risus feugiat in ante metus dictum at. Facilisis gravida neque convallis a cras semper auctor neque vitae. Augue ut lectus arcu bibendum at varius. Massa vitae tortor condimentum lacinia quis. Nulla malesuada pellentesque elit eget.</p>
+
+			<p>In massa tempor nec feugiat nisl pretium. Et ultrices neque ornare aenean euismod elementum nisi. Diam quis enim lobortis scelerisque fermentum dui. Sagittis vitae et leo duis ut diam quam nulla porttitor. Ullamcorper dignissim cras tincidunt lobortis feugiat. Auctor augue mauris augue neque gravida. Ac ut consequat semper viverra nam libero justo laoreet sit. Egestas pretium aenean pharetra magna ac placerat vestibulum lectus mauris. Nunc lobortis mattis aliquam faucibus purus in. Pretium fusce id velit ut tortor pretium viverra suspendisse. Fermentum leo vel orci porta non. Lacus sed turpis tincidunt id aliquet risus feugiat in ante. Sit amet nisl suscipit adipiscing bibendum est ultricies integer quis. Urna nec tincidunt praesent semper feugiat nibh.</p>
+
+			<p>Montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada. Porta nibh venenatis cras sed felis eget velit aliquet. Sed id semper risus in hendrerit gravida rutrum. Mauris sit amet massa vitae tortor condimentum lacinia quis vel. Cras fermentum odio eu feugiat pretium nibh ipsum. Orci nulla pellentesque dignissim enim sit amet venenatis urna. Aliquet nibh praesent tristique magna sit amet purus gravida quis. Platea dictumst quisque sagittis purus sit amet volutpat consequat mauris. Eu turpis egestas pretium aenean pharetra magna ac. Massa id neque aliquam vestibulum morbi blandit cursus risus. Nulla facilisi cras fermentum odio eu feugiat pretium nibh ipsum. Consectetur lorem donec massa sapien. Convallis aenean et tortor at risus.</p>
 		</div>
-		<!--<div id="overlay" style="display: none"></div>
-		<div id="modal" style="display: none">
-			<div>Number of balls?</div>
-			<input id="nballs" type="text" style="margin: 20px 0px;"><br/>
-			<div class="wrapper">
-				<div id="submit">Go</div>
-			</div>
-		</div>-->
 		<script src="utils.js"></script>
 		<script src="sim.js"></script>
 		<script src="index.js"></script>
