quick text addition

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,11 +17,13 @@
 			<p>This is a basic simulation of the spread of COVID-19. Click the
 			<i class="fas fa-plus-circle"></i> icon to add balls to the simulation. These balls
 			represent people. Use the <i class="fas fa-mouse-pointer"></i> tool to mark balls as
-			infected. The <i class="fas fa-pencil-ruler"></i> tool can be used to draw lines on the
+			infected. Scroll with the <i class="fas fa-mouse-pointer"></i> tool to open and close
+			walls. The <i class="fas fa-pencil-ruler"></i> tool can be used to draw lines on the
 			field - these serve as barriers to the spread of the virus. The
 			<i class="fas fa-border-none"></i> tool will add walls to the field. These barriers can
 			be opened or closed increase / decrease the spread of the virus. The download and upload
-			icons can be used to save / load simulations.</p>
+			icons can be used to save / load simulations. The <i class="fas fa-undo"></i> icon will
+			reset the simulation.</p>
 			
 			<div id="sim" class="sim"></div>
 
