--- a/ui/index.html
+++ b/ui/index.html
@@ -45,6 +45,8 @@
 			
 			<div id="sim" class="sim"></div>
 
+			<div id="sim2" class="sim"></div>
+
 		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js"></script>
 		<script src="utils.js"></script>
