refactored into multiple files TODO: setup bundler

--- a/ui/index.html
+++ b/ui/index.html
@@ -96,9 +96,22 @@
 		<div id="sim2" class="sim"></div>
 
 	</div>
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js"></script>
-	<script src="utils.js"></script>
-	<script src="sim.js"></script>
+
+	<script src="sim/utils.js"></script>
+
+	<script src="sim/Ball.js"></script>
+	<script src="sim/Line.js"></script>
+	<script src="sim/Wall.js"></script>
+
+	<script src="sim/DrawLinesHandler.js"></script>
+	<script src="sim/DrawWallsHandler.js"></script>
+	<script src="sim/PointerHandler.js"></script>
+	
+	<script src="sim/SimProperties.js"></script>
+	<script src="sim/Sim.js"></script>
+
 	<script src="index.js"></script>
 </body>
 
