fixed tiny problem that turned the sim icons blue

--- a/ui/index.html
+++ b/ui/index.html
@@ -59,9 +59,12 @@
 				As the simulation progresses,
 				watch what happens to the R-effective display on the right.
 				Leave the setting for walls at 0% for this run.</p>
+		
+		</div>
+		
+		<div id="sim" class="sim"></div>
 
-			<div id="sim" class="sim"></div>
-
+		<div class="text">
 			<div class="il">
 				<div><i class="fas fa-plus-circle"></i></div>
 				<p>Add people to the simulation field.</p>
